# nova

./: .clangd  .gitignore  package.json
.github/workflows/: rust-ci.yml
crates/authenticator/: Cargo.toml
crates/authenticator/src/: main.rs  tls_config.txt
crates/authenticator/src/auth/: jwt.rs
crates/authenticator/src/crypto/: vault.rs
crates/authenticator/src/services/: auth_db.rs  mod.rs
crates/nova_api/: Cargo.toml
crates/nova_api/src/: authenticator_api.rs  lib.rs
crates/nova_auth/: Cargo.toml
crates/nova_auth/src/: auth_service.rs  lib.rs  session_manager.rs
crates/nova_authenticator/: Cargo.toml
crates/nova_authenticator/src/: main.rs
crates/nova_authenticator/src/auth/: jwt.rs
crates/nova_authenticator/src/crypto/: vault.rs
crates/nova_authenticator/src/net/: mod.rs
crates/nova_authenticator/src/net/webserver/: mod.rs  webserver.rs
crates/nova_authenticator/src/services/: auth_db.rs  auth_service.rs
crates/nova_authenticator/src/utils/: es256_key_gen.py  tls_certificate_generator.py
crates/nova_compression/: Cargo.toml
crates/nova_compression/src/: zip.rs
crates/nova_crypto/: Cargo.toml
crates/nova_crypto/src/: crypto.rs  lib.rs  password_generator.rs
crates/nova_di/: Cargo.toml
crates/nova_fs/: Cargo.toml
crates/nova_fs/src/: file_system.rs  folder_resolver.rs  lib.rs
crates/nova_project/: Cargo.toml
crates/nova_project/src/: project.rs
crates/nova_rate_limit/: Cargo.toml
crates/nova_rate_limit/src/: fixed.rs
crates/nova_render/: Cargo.toml
crates/nova_render/src/: main.rs
crates/rate_limit/: Cargo.toml
crates/rate_limit/src/: fixed.rs
nova/: Cargo.toml  build.rs  clippy.toml
nova-app/: package.json
nova-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
nova-app/src-tauri/src/: FileManager.rs  lib.rs  main.rs
nova-app/src-tauri/src/auth_state/: auth_state.rs  mod.rs
nova-app/src-tauri/src/authenticated_command/: Cargo.toml
nova-app/src-tauri/src/authenticated_command/src/: lib.rs
nova-app/src-tauri/src/commands/: FileSystem.rs  auth.rs  file_system.rs  log.rs  mod.rs  project.rs
nova-web/: biome.jsonc  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
nova-web/src/: App.css  App.tsx  DoubleNavbar.tsx  Doublenavbar.module.css  Router.tsx  TopBar.module.css  TopBar.tsx  main.tsx
nova-web/src/components/: CreateProjectButton.module.css  CreateProjectButton.tsx  OpenProjectButton.tsx
nova-web/src/components/CTWindowingToolSettings/: CTWindowingToolSettings.module.css  CTWindowingToolSettings.tsx  PresetSelect.module.css  PresetSelect.tsx
nova-web/src/components/ColorSchemeToggle/: ColorSchemeToggle.tsx
nova-web/src/components/CreateProjectButton/: CreateProjectButton.tsx
nova-web/src/components/LayoutSwitcher/: LayoutSwitcher.tsx
nova-web/src/components/LayoutToolbar/: LayoutToolbar.tsx
nova-web/src/components/MainTabBar/: MainTabBar.module.css  MainTabBar.tsx
nova-web/src/components/NavigationTabs/: NavigationTabs.tsx
nova-web/src/components/ProjectToolbar/: ProjectToolbar.tsx
nova-web/src/components/ResizableDoubleNavbar/: ResizableDoubleNavbar.module.css  ResizableDoubleNavbar.tsx
nova-web/src/components/UserMenu/: UserMenu.tsx
nova-web/src/components/ViewportGridPanel/: ViewportGridPanel.module.css  ViewportGridPanel.test.tsx  ViewportGridPanel.tsx
nova-web/src/components/ViewportShell/: ViewportShell.module.css  ViewportShell.test.tsx  ViewportShell.tsx
nova-web/src/components/viewport/: ViewPortCanvas.tsx  Viewport.tsx  ViewportGridPanel.test.tsx  ViewportGridPanel.tsx  ViewportPanel.tsx  ViewportShell.module.css  ViewportShell.tsx  ViewportWorkspace.module.css  ViewportWorkspace.tsx
nova-web/src/layout/: GridManager.test.ts  GridManager.ts
nova-web/src/lib/: FileSystem.ts  Logger.ts  Result.spec.ts  Result.ts  Utils.spec.ts  Utils.ts
nova-web/src/nova_api/: FileSystemApi.ts  NovaApi.ts
nova-web/src/pages/: home.tsx  viewer.module.css  viewer.tsx
nova-web/src/pages/authentication/: AuthenticationPage.module.css  AuthenticationPage.tsx  SignupPage.module.css  SignupPage.tsx
nova-web/src/pages/not_found/: PageNotFound.module.css  PageNotFound.tsx
nova-web/src/project/: project.ts
nova-web/src/renderer/: RenderContext.ts
nova-web/src/schemas/: CTWindowingPresetSchema.ts
nova-web/src/stores/: AuthStore.ts  ViewerToolStore.ts  renderStore.ts  uiStore.ts  viewerTypes.ts
nova-web/src/utils/: CTWindowingPresetsLoader.ts  PasswordGenerator.test.ts  PasswordGenerator.ts
nova/authenticator/: Cargo.toml
nova/authenticator/src/: main.rs  tls_config.txt
nova/authenticator/src/auth/: jwt.rs
nova/authenticator/src/crypto/: .vault_config.toml  crypto.rs  key_derivation.rs  mod.rs  vault.rs
nova/authenticator/src/ioc/: singleton.rs
nova/authenticator/src/net/webserver/: webserver.rs
nova/authenticator/src/net/webserver/routes/: auth.rs  routes.rs
nova/authenticator/src/services/: auth_db.rs  auth_service.rs
nova/authenticator/src/utils/: tls_certificate_generator.py
nova/benches/: bench_file_system.rs
nova/src/: application.rs  lib.rs
nova/src/api/: authenticator_api.rs
nova/src/auth/: auth_service.rs
nova/src/core/: folder_resolver.rs  mod.rs
nova/src/dicom/: dicom.rs  dicom_exporter.rs  mod.rs
nova/src/dicom/bridge/: dicom_bridge.rs  mod.rs
nova/src/dicom/cxx/: CMakeLists.txt  conanfile.py  dicom.cpp  dicom.h  dicom_image.cpp  dicom_image.h  dicom_windowing.cpp  dicom_windowing.h  main.cpp
nova/src/dicom/cxx/api/: CMakeLists.txt  dicom_api.cpp  dicom_api.h  log_api.cpp  log_api.h
nova/src/dicom/cxx/assets/presets/: windowing.json
nova/src/dicom/cxx/lib/: CMakeLists.txt  enum_utils.h  hash_map.h  json.h  logger.cpp  logger.h  result.h
nova/src/fs/: file_system.rs  mod.rs
nova/src/ioc/: singleton.rs
nova/src/project/: project.rs
nova_ui/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
nova_ui/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
nova_ui/Views/: MainWindow.axaml  MainWindow.axaml.cs
(+5 files in other folders)
