[package]
name = "nova"
version = "0.1.0"
edition = "2021"

[lib]
name = "nova"
path = "src/lib.rs"

[dependencies]
dicom-pixeldata = { version = "0.8.1", features = ["ndarray"] }
dicom-object = "0.8.1"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
rayon = "1.10.0"
image = "0.25.6"
cxx = "1.0.158"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ripunzip = "2.0.3"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "rt-multi-thread", "macros"] }
futures = "0.3.31"
tempfile = "3.20.0"
criterion = "0.6.0"
crossbeam = "0.8.4"
arc-swap = "1.7.1"
parking_lot = "0.12.4"

[build-dependencies]
cxx-build = "1.0.158"

[[bench]]
name = "bench_file_system"
harness = false
