[package]
name = "nova"
version = "0.1.0"
edition = "2024"

[lib]
name = "nova"
path = "src/lib.rs"

[dependencies]
dicom-pixeldata = { version = "0.8.1", features = ["ndarray"] }
dicom-object = "0.8.1"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
rayon = "1.10.0"
image = "0.25.6"
cxx = "1.0.158"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.20"
ripunzip = "2.0.3"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "rt-multi-thread", "macros"] }
futures = "0.3.31"
tempfile = "3.20.0"
criterion = "0.6.0"
crossbeam = "0.8.4"
arc-swap = "1.7.1"
parking_lot = "0.12.4"
loom = "0.7.2"
dashmap = "7.0.0-rc2"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
zeroize = { version = "1.8.2", features = ["serde"] }
rate_limit = { path = "../crates/rate_limit"}
chrono = { version = "0.4.42", features = ["serde", "clock"] }

[build-dependencies]
cxx-build = "1.0.158"

[[bench]]
name = "bench_file_system"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native", "link-arg=-fuse-ld=lld", "-Z", "threads=8"]

[dev-dependencies]
cargo-audit = "0.21.2"
cargo-deny = "0.18.5"
