[package]
name = "nova_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.41"
chrono = "0.4.42"
parking_lot = "0.12.5"
chacha20poly1305 = "0.10.1"
toml = "0.9.8"
serde = { version = "1.0.219", features = ["derive"] }
keyring = { version = "3.6.3", features = ["linux-native", "windows-native"] }
nova_rate_limit = { path = "../nova_rate_limit" }
nova_api = { path = "../nova_api" }
nova_crypto = { path = "../nova_crypto" }
nova_fs = { path = "../nova_fs" }
