[package]
name = "nova-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nova_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-fs = "2.4.4"
nova = { path = "../../nova" }
tokio = "1.48.0"
tracing-subscriber = { version = "0.3.20", features = ["time"]}
anyhow = "1.0.100"
tauri-plugin-dialog = "2.4.2"
tracing = "0.1.41"
time = { version = "0.3.44", features = ["local-offset"] }

