[package]
name = "authenticator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "rt-multi-thread", "macros", "process"] }
arc-swap = "1.7.1"
parking_lot = "0.12.4"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
axum-macros = "0.5.0"
tower-http = "0.6.6"
rustls-pemfile = "2.2.0"
rustls = { version = "0.23.28", features = ["aws-lc-rs"]}
mimalloc = { version = "*", features = ["secure"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
argon2 = "0.5.3"
aead = "0.5.2"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
base64 = "0.22.1"
zeroize = { version = "1.8.2", features = ["serde"] }
num_cpus = "1.17.0"
toml = "0.9.8"
clap = { version = "4.5.51", features = ["derive"] }
pkcs8 = { version = "0.10.2" , features = ["pem", "encryption", "alloc", "std"] }
chrono = "0.4.42"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"]}
dashmap = "7.0.0-rc2"
once_cell = "1.21.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native", "link-arg=-fuse-ld=lld", "-Z", "threads=8"]
